2004-09-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-admin.in:
	* configure.ac:
	* flumotion/admin/__init__.py:
	* flumotion/admin/adminclient.py:
	* flumotion/admin/admininterface.py:
	* flumotion/admin/gtk/Makefile.am:
	* flumotion/admin/gtk/__init__.py:
	  move actual client to gtk

2004-09-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-admin.in:
	* configure.ac:
	* flumotion/Makefile.am:
	* flumotion/admin/adminclient.py:
	* flumotion/gui/adminclient.py:
	* flumotion/gui/admininterface.py:
	* flumotion/gui/streamclient.py:
	* flumotion/manager/manager.py:
	  move gui to admin

2004-09-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	* doc/reference/Makefile.am:
	* flumotion/common/Makefile.am:
	* flumotion/common/launcher.py:
	* flumotion/manager/Makefile.am:
	* flumotion/manager/config.py:
	  move manager.config to common

2004-09-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion.in:
	* flumotion/manager/registry.py:
	  put registry in homedir.  create higher-level directories.
	  turn on logging before registry checks.

2004-09-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* autogen.sh:
	* configure.ac:
	  remove autoheader and related things
	* data/Makefile.am:
	* data/registry/Makefile.am:
	  remove
	* data/registry/basecomponents.xml:
	* flumotion/config/installed.py.in:
	* flumotion/config/uninstalled.py.in:
	  add registrydir config setting
	  put installed version in homedir
	* flumotion/manager/registry.py:
	  change to components.xml

2004-09-08  Johan Dahlin  <johan@gnome.org>

	* flumotion/manager/admin.py (AdminHeaven): 
	* flumotion/manager/component.py (ComponentHeaven): Implement
	IHeaven interface

	* flumotion/common/interfaces.py (IHeaven.removeAvatar): Add a
	bunch of new interfaces

2004-09-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/Makefile.am:
	* testsuite/Makefile.am: