@@ -1,5 +1,11 @@
 2004-09-08  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* flumotion/admin/admin.py:
+	* flumotion/admin/gtk/client.py:
+	  change clients to components.
+
+2004-09-08  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* bin/flumotion-admin.in:
 	* configure.ac:
 	* flumotion/admin/__init__.py:
